overflow fixes

--- a/public/css/channel.css
+++ b/public/css/channel.css
@@ -1,114 +1,137 @@
 /* Templates */
 
 html, body {
-  height: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 html {
-  background-color: #000;
+    background-color: #000;
 }
+
 body {
-  position: relative;
+    position: relative;
+    margin: 0;
 }
 
 section {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
+
 .template-full-screen,
 .template-with-sidebar {
-  position: relative;
-  overflow: hidden;
-  height: 0;
+    position: relative;
+    overflow: hidden;
+    height: 0;
 }
+
 .widescreen {
-  padding-bottom: 56.25%;
+    /*padding-bottom: 56.25%;*/
+    position: fixed;
+    overflow: hidden;
+    /*height: 0;*/
+    width: 100%;
+    height: 100%;
 }
+
 .macbook {
-  padding-bottom: 62.5%;
+    padding-bottom: 62.5%;
 }
+
 .main-window {
-  background-color: #ccc;
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-align-items: stretch;
-  align-items: stretch;
-  -webkit-flex-direction: column;
-  flex-direction: column;
+    background-color: #ccc;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: stretch;
+    align-items: stretch;
+    -webkit-flex-direction: column;
+    flex-direction: column;
 }
+
 .main-window iframe {
-  width: 100%;
-  height: 100%;
-  border: 0;
-  -webkit-flex: 1;
-  flex: 1;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    -webkit-flex: 1;
+    flex: 1;
 }
+
 .template-full-screen .main-window {
-  width: 100%;
+    width: 100%;
 }
+
 .template-with-sidebar .main-window {
-  width: 75%;
+    width: 75%;
 }
+
 .template-with-sidebar .sidebar {
-  background-color: #fff;
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 25%;
-  padding: 2vw;
-  border-left: 1px solid #ccc;
-  font-size: 2vw;
+    background-color: #fff;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 25%;
+    padding: 2vw;
+    border-left: 1px solid #ccc;
+    font-size: 2vw;
 }
 
 .alert {
-  color: #fff;
-  font-size: 2vw;
-  padding: 1vw 2vw;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+    color: #fff;
+    font-size: 2vw;
+    padding: 1vw 2vw;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
+
 .alert.urgent {
-  background-color: #ba0c2f;
+    background-color: #ba0c2f;
 }
+
 .alert.default {
-  background-color: #333;
+    background-color: #333;
 }
+
 .alert.green {
-  background-color: #82b548;
+    background-color: #82b548;
 }
+
 .channel-overlay {
-  position: absolute;
-  bottom: 1vw;
-  right: 2vw;
-  color: #fff;
-  text-shadow: 0 0 3px rgba(0,0,0,.6);
-  font-size: 2vw;
-  opacity: .6;
+    position: absolute;
+    bottom: 1vw;
+    right: 2vw;
+    color: #fff;
+    text-shadow: 0 0 3px rgba(0, 0, 0, .6);
+    font-size: 2vw;
+    opacity: .6;
 }
 
 .setup {
-  position: relative;
+    position: relative;
 }
+
 .setup .main-window {
-  background-color: #82b548;
+    background-color: #82b548;
 }
+
 .setup h1 {
-  font-size: 4vw;
-  line-height: 1;
-  margin: -2vw 0 0 0;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  color: #333;
-  z-index: 100;
-  text-align: center;
-  color: #fff;
+    font-size: 4vw;
+    line-height: 1;
+    margin: -2vw 0 0 0;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    color: #333;
+    z-index: 100;
+    text-align: center;
+    color: #fff;
 }
